Fix x-axis overflow on price table modal.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -728,7 +728,8 @@ table p {
   border: none;
   border-radius: 0;
   color: #fafafa;
-  overflow-y:auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .price-table-modal fieldset {
